[package]
name = "diesel-sample"
version = "0.1.0"
authors = ["TaisukeYamamoto <uwattotaitai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.15"
r2d2 = "0.8.9"
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.25"
uuid = {version ="0.8.2", features = ["serde", "v4"]}


[dev-dependencies]
actix-rt = "1"
